<resources>
    <string name="app_name">UKM-Ku</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pengurus</string>
    <string name="nav_header_subtitle">UKM Ku</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_history">Saldo</string>
    <string name="menu_list">Daftar Pembayaran Kas</string>
    <string name="menu_uang_masuk_keluar">Uang Masuk dan Keluar</string>
    <string name="menu_rapat">Hasil Rapat</string>
    <string name="menu_evaluasi">Evaluasi Event</string>
    <string name="menu_surat">Surat Masuk dan Keluar</string>
    <string name="menu_inventaris">Inventaris</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
