<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Keuangan">
        <menu>
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history_saldo"
                android:title="@string/menu_history" />
            <item
                android:id="@+id/nav_list"
                android:icon="@drawable/ic_list_kas"
                android:title="@string/menu_list" />
            <item
                android:id="@+id/nav_uang_masuk_keluar"
                android:icon="@drawable/ic_uang_masuk_keluar"
                android:title="@string/menu_uang_masuk_keluar" />
        </menu>
    </item>

    <item android:title="Sekretaris">
        <menu>
            <item
                android:id="@+id/nav_rapat"
                android:icon="@drawable/ic_rapat"
                android:title="@string/menu_rapat" />
            <item
                android:id="@+id/nav_evaluasi"
                android:icon="@drawable/ic_evaluasi"
                android:title="@string/menu_evaluasi" />
            <item
                android:id="@+id/nav_surat"
                android:icon="@drawable/ic_surat"
                android:title="@string/menu_surat" />
            <item
                android:id="@+id/nav_inventaris"
                android:icon="@drawable/ic_inventaris"
                android:title="@string/menu_inventaris" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
